--- a/wjf/index.html
+++ b/wjf/index.html
@@ -6,13 +6,21 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>微积分</title>
         <!-- 作者信息 -->
-        <meta name="author" content="G. Wang">
+        <meta name="author" content="">
         <!-- 主题 -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
         <link rel="stylesheet" href="theme-custom.css">
         <!-- <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css"> -->
-        <!-- LaTex公式显示 -->
-            <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css" />
+        <!-- 数学公式 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    tex2jax: {
+      skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+      inlineMath: [['$','$']]
+    }
+  });
+</script>
         <!-- 评论 -->
             <!-- <link rel="stylesheet" href="//unpkg.com/gitalk/dist/gitalk.css"> -->
     </head>
@@ -26,7 +34,7 @@
             subMaxLevel: 3,              // md文件的三级以上标题显示在侧边栏
 
             name: '微积分',                // 侧边栏顶部名字
-            repo: 'https://sslchi.github.io',   // 右上角GitHub项目路径
+            repo: 'https://mathicu.github.io',   // 右上角GitHub项目路径
             homepage: 'index.md',       // 网站首页
             themeColor: '#0B87DA',
 
