--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
- <meta http-equiv="refresh" content="0;url= http://xfbbs.com/ ">
+ <meta http-equiv="refresh" content="0;url= http://mathicu.bitbucket.io ">
 
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
 
